--- a/pacman/EditorWindow.xaml
+++ b/pacman/EditorWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="pacman.MainWindow"
+﻿<Window x:Class="pacman.EditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pacman"
         mc:Ignorable="d"
-        Title="PAC-MAN" Height="450" Width="800"
-        KeyDown="Window_KeyDown">
+        Title="Level Editor" Height="450" Width="800">
     <Grid>
-        <local:GameCanvas x:Name="scene" RenderOptions.EdgeMode="Aliased" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+        <local:EditorCanvas x:Name="scene" RenderOptions.EdgeMode="Aliased" RenderOptions.BitmapScalingMode="NearestNeighbor"
+                            MouseDown="scene_MouseDown" MouseUp="scene_MouseUp" MouseMove="scene_MouseMove" MouseWheel="scene_MouseWheel"/>
     </Grid>
 </Window>
